email, user and seller filtering issues
